samples/_failures_safe/1761144731_1a79dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7278eee.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_b7278eee.c:161: error: expected ‘{’ at end of input
